--- a/packages/manager/package.json
+++ b/packages/manager/package.json
@@ -1,18 +1,49 @@
 {
   "name": "@react-consent/manager",
-  "version": "0.1.0",
-  "main": "lib/client.ts",
-  "dependencies": {
-    "js-cookie": "latest"
+  "version": "0.0.1-alpha.0",
+  "license": "MIT",
+  "url": "https://fintory.com/oss/consent-manager",
+  "repository": {
+    "type": "git",
+    "url": "github.com/fintory/react-consent.git"
+  },
+  "contributors": [
+    "Nick Schmidt <nick@fintory.com>"
+  ],
+  "exports": {
+    "require": "./dist/client.cjs",
+    "default": "./dist/client.mjs",
+    "types": "./dist/client.d.ts"
+  },
+  "main": "./dist/client.cjs",
+  "module": "./dist/client.mjs",
+  "unpkg": "./dist/client.umd.js",
+  "scripts": {
+    "lint": "eslint .",
+    "build": "microbundle lib/client.ts",
+    "prepublish": "pnpm run clean && pnpm run build",
+    "clean": "rimraf dist/"
+  },
+  "types": "./dist/client.d.ts",
+  "peerDependencies": {
+    "js-cookie": "^2.0.0 || ^3.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/js-cookie": "3.0.2",
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "eslint": "8.23.1",
+    "js-cookie": "^3.0.0",
+    "microbundle": "^0.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-node": "10.9.1",
+    "rimraf": "^3.0.2",
     "typescript": "4.8.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
