--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "pretty-quick": "3.1.3",
     "shell-quote": "1.7.3",
     "turbo": "1.5.4"
+  },
+  "dependencies": {
+    "@changesets/changelog-github": "^0.4.7",
+    "@changesets/cli": "^2.25.2"
   }
 }
