--- a/packages/manager/package.json
+++ b/packages/manager/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-consent/manager",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1",
   "license": "MIT",
   "url": "https://fintory.com/oss/consent-manager",
   "repository": {
