feat: change build settings to make lib work

--- a/packages/manager/tsconfig.build.json
+++ b/packages/manager/tsconfig.build.json
@@ -14,7 +14,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "moduleResolution": "nodenext",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "esModuleInterop": true
   }
 }
