--- a/packages/manager/package.json
+++ b/packages/manager/package.json
@@ -12,9 +12,11 @@
     "Nick Schmidt <nick@fintory.com>"
   ],
   "exports": {
+    "package.json": "./package.json",
     ".": {
+      "types": "./dist/client.d.ts",
       "require": "./dist/client.cjs",
-      "default": "./dist/client.mjs"
+      "import": "./dist/client.mjs"
     }
   },
   "main": "./dist/client.cjs",
@@ -26,7 +28,7 @@
   ],
   "scripts": {
     "lint": "eslint .",
-    "build": "microbundle lib/client.ts",
+    "build": "microbundle lib/client.ts --globals react=React --compress false --jsx React.createElement",
     "prepublish": "pnpm run clean && pnpm run build",
     "clean": "rimraf dist/"
   },
