--- a/package.json
+++ b/package.json
@@ -16,13 +16,20 @@
     "start-storybook": "turbo run start-storybook"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "eslint": "8.23.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "shell-quote": "1.7.3",
-    "turbo": "1.5.4"
+    "turbo": "1.5.4",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "@changesets/changelog-github": "^0.4.7",
