--- a/packages/manager/package.json
+++ b/packages/manager/package.json
@@ -39,16 +39,26 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.3",
     "@types/js-cookie": "3.0.2",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "eslint": "8.23.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "js-cookie": "^3.0.0",
     "microbundle": "^0.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
+    "tsafe": "^1.4.1",
     "typescript": "4.8.2"
   },
   "publishConfig": {
