--- a/packages/manager/package.json
+++ b/packages/manager/package.json
@@ -29,6 +29,7 @@
   ],
   "scripts": {
     "lint": "eslint . --ext tsx,ts",
+    "test": "jest",
     "build": "microbundle lib/client.ts --globals react=React --compress false --jsx React.createElement",
     "prepublish": "pnpm run clean && pnpm run build",
     "clean": "rimraf dist/"
